EPMRPP-34396 fix: word break in grid tags

--- a/app/src/pages/inside/common/itemInfo/tagsBlock/tagsBlock.scss
+++ b/app/src/pages/inside/common/itemInfo/tagsBlock/tagsBlock.scss
@@ -26,6 +26,7 @@
   color: $COLOR--gray-60;
   text-decoration: none;
   margin-right: 3px;
+  word-break: break-word;
 
   &:hover {
     color: $COLOR--charcoal-grey;
